Clase 2 curso desarrollo web 39410

--- a/index.html
+++ b/index.html
@@ -9,33 +9,35 @@
   <body>
     <!--encabezado-->
     <header>
-      <div>LOGO</div>
-      <nav>MENU</nav>
+
     </header>
 
     <!--conteindo principal-->
     <main>
-      <section>CONTENIDO PRINCIPAL</section>
-      <h1>Encabezado 1 (32px)</h1>
-      <h2>Encabezado 2 (24px)</h2>
-      <h3>Encabezado 3 (18px)</h3>
-      <h4>Encabezado 4 (16px)</h4>
-      <h5>Encabezado 5 (13px)</h5>
-      <h6>Encabezado 6 (10px)</h6>
+      <!--productos en oferta-->
+      <section>
+
+      </section>
     </main>
 
-    <!--seccion-->
-    <section>SECCION</section>
+    <!--seccion destacados-->
+    <section>
 
-    <!--barra lateral-->
-    <aside>POSTEOS RECIENTES</aside>
+    </section>
+
+    <!--categorías de productos-->
+    <aside>
+
+    </aside>
 
     <!--pie de pagina-->
     <footer>
       <div>
-        <p>COPYRIGHT</p>
+        <p></p>
       </div>
-      <div>REDES SOCIALES</div>
+      <div>
+
+      </div>
     </footer>
   </body>
 </html>
