--- a/pages/portafolio.html
+++ b/pages/portafolio.html
@@ -7,12 +7,17 @@
     <title>Document</title>
 </head>
 <body>
+    <!--encabezado-->
     <header>
 
     </header>
+
+    <!--conteindo principal-->
     <main>
 
     </main>
+
+    <!--pie de pagina-->
     <footer>
 
     </footer>
