--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -1,25 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <!--encabezado-->
     <header>
-
+      <div>
+        <img src="../img/logo.png" alt="logo" />
+      </div>
+      <nav>
+        <ul>
+          <li><a href="../index.html">Inicio</a></li>
+          <li>
+            <a href="productos.html">Productos</a>
+            <ul>
+              <li><a href="#">Computadoras</a></li>
+              <li><a href="#">Laptops</a></li>
+              <li><a href="#">Accesorios</a></li>
+            </ul>
+          </li>
+          <li><a href="ofertas.html">Ofertas</a></li>
+          <li><a href="carrito.html">Carrito</a></li>
+          <li><a href="contacto.html">Contacto</a></li>
+        </ul>
+      </nav>
     </header>
 
     <!--conteindo principal-->
-    <main>
-
-    </main>
+    <main></main>
 
     <!--pie de pagina-->
-    <footer>
-
-    </footer>
-</body>
+    <footer></footer>
+  </body>
 </html>
