Clase 3 curso desarrollo web 39410

--- a/pages/ofertas.html
+++ b/pages/ofertas.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <meta name="viewport" content="widli=device-widli, initial-scale=1.0" />
+    <title>Ofertas</title>
+    <link rel="stylesheet" href="../css/estilos.css">
   </head>
   <body>
     <!--encabezado-->
@@ -29,9 +30,77 @@
         </ul>
       </nav>
     </header>
+    <section id="banner">
+
+    </section>
 
     <!--conteindo principal-->
-    <main></main>
+    <main>
+      <h1 id="ofertas">Ofertas</h1>
+      <section>
+        <div class="card destacado">
+          <div>
+            <img src="../img/ASUS_ROG_Strix_G15.jpg" alt="ASUS ROG Strix G15">
+          </div>
+          <div>
+            <div>
+              <h2>ASUS ROG Strix G15</h2>
+              <ul>
+                <li>Procesador: Intel Core i7-10750H</li>
+                <li>Tarjeta gráfica: NVIDIA GeForce RTX 3070</li>
+                <li>RAM: 16GB DDR4</li>
+              </ul>
+              <p>Precio: $1,699.99</p>
+              <h3>Oferta: $1,299.99</h3>
+            </div>
+            <div>
+              <button class="button" id="button">Comprar</button>
+            </div>
+          </div>
+        </div>
+        <div class="card">
+          <div>
+            <img src="../img/Alienware_Aurora_R12.jpg" alt="Alienware Aurora R12">
+          </div>
+          <div>
+            <div>
+              <h2>Alienware Aurora R12</h2>
+              <ul>
+                <li>Procesador: Intel Core i9-11900KF</li>
+                <li>Tarjeta gráfica: NVIDIA GeForce RTX 3080</li>
+                <li>RAM: 16GB DDR4</li>
+              </ul>
+              <p>Precio: $3,199.99</p>
+              <h3>Oferta: $2,599.99</h3>
+            </div>
+            <div>
+              <button class="button">Comprar</button>
+            </div>
+          </div>
+        </div>
+        <div class="card">
+          <div>
+            <img src="../img/MSI_GE75_Raider.jpg" alt="MSI GE75 Raider">
+          </div>
+          <div>
+            <div>
+              <h2>MSI GE75 Raider</h2>
+              <ul>
+                <li>Procesador: Intel Core i7-10875H</li>
+                <li>Tarjeta gráfica: NVIDIA GeForce RTX 3070</li>
+                <li>RAM: 32GB DDR4</li>
+              </ul>
+              <p>Precio: $2,099.99</p>
+              <h3>Oferta: $1,899.99</h3>
+            </div>
+            <div>
+              <button class="button">Comprar</button>
+            </div>
+          </div>
+        </div>
+      </section>
+      
+    </main>
 
     <!--pie de pagina-->
     <footer></footer>
