--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -4,7 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Carrito</title>
+    <link rel="stylesheet" href="../css/estilos.css">
+    <!--
+    <style>
+      h1{
+        color: red;
+      }
+    </style>
+    -->
   </head>
   <body>
     <!--encabezado-->
