Clase 4 curso desarrollo web 39410

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Inicio</title>
+    <link rel="stylesheet" href="css/estilos.css">
   </head>
   <body>
 
@@ -31,7 +32,7 @@
     </header>
 
     <!--conteindo principal-->
-    <main>
+    <main class="main">
       <!--productos en oferta-->
       <section>
         <div></div>
@@ -58,7 +59,7 @@
               <td>NVIDIA GeForce RTX 3070</td>
               <td>16GB DDR4</td>
               <td>$1,699.99</td>
-              <td><img src="https://http2.mlstatic.com/D_NQ_NP_857380-MLA51218942720_082022-V.jpg" alt="ASUS ROG Strix G15"></td>
+              <td><img src="img/ASUS_ROG_Strix_G15.jpg" alt="ASUS ROG Strix G15"></td>
             </tr>
             <tr>
               <td>Alienware</td>
@@ -67,7 +68,7 @@
               <td>NVIDIA GeForce RTX 3080</td>
               <td>32GB DDR4</td>
               <td>$3,199.99</td>
-              <td><img src="img/Alienware_Aurora_12.jpg" alt="Alienware Aurora R12"></td>
+              <td><img src="img/Alienware_Aurora_R12.jpg" alt="Alienware Aurora R12"></td>
             </tr>
             <tr>
               <td>MSI</td>
@@ -76,7 +77,7 @@
               <td>NVIDIA GeForce RTX 3070</td>
               <td>32GB DDR4</td>
               <td>$2,099.99</td>
-              <td><img src="https://http2.mlstatic.com/D_NQ_NP_669999-MLA51324600829_082022-V.jpg" alt="MSI GE75 Raider"></td>
+              <td><img src="img/MSI_GE75_Raider.jpg" alt="MSI GE75 Raider"></td>
             </tr>
           </tbody>
         </table>
@@ -107,5 +108,6 @@
         </ol>
       </div>
     </footer>
+
   </body>
 </html>
