--- a/pages/productos.html
+++ b/pages/productos.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Productos</title>
+    <link rel="stylesheet" href="../css/estilos.css">
   </head>
   <body>
     <!--encabezado-->
@@ -31,9 +32,23 @@
     </header>
 
     <!--conteindo principal-->
-    <main></main>
+    <main>
+      <div class="cssAwesome">
+        CSS IS <strong>AWESOME</strong>
+      </div>
+    </main>
 
     <!--pie de pagina-->
-    <footer></footer>
+    <footer>
+      <div>
+        <p></p>
+      </div>
+      <div>
+        <ol>
+          <li><a href="#header">Volver arriba</a></li>
+          <li><a href="#">Whatsapp</a></li>
+        </ol>
+      </div>
+    </footer>
   </body>
 </html>
