Clase 4 curso desarrollo web 39410

--- a/pages/productos.html
+++ b/pages/productos.html
@@ -32,7 +32,7 @@
     </header>
 
     <!--conteindo principal-->
-    <main>
+    <main class="main">
       <div class="cssAwesome">
         CSS IS <strong>AWESOME</strong>
       </div>
