Clase 5 curso desarrollo web 39410

--- a/index.html
+++ b/index.html
@@ -5,26 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Inicio</title>
-    <link rel="stylesheet" href="css/estilos.css">
+    <link rel="stylesheet" href="css/estilos.css" />
   </head>
   <body>
-
     <!--encabezado-->
     <header id="header">
       <div>
-        <img src="img/logo.png" alt="logo">
+        <img src="img/logo.png" alt="logo" />
       </div>
       <nav>
         <ul>
           <li><a href="index.html">Inicio</a></li>
-          <li><a href="pages/productos.html">Productos</a> 
+          <li>
+            <a href="pages/productos.html">Productos</a>
             <ul>
               <li><a href="#">Computadoras</a></li>
               <li><a href="#">Laptops</a></li>
               <li><a href="#">Accesorios</a></li>
             </ul>
           </li>
-          <li><a href="pages/ofertas.html">Ofertas</a> </li>
+          <li><a href="pages/ofertas.html">Ofertas</a></li>
           <li><a href="pages/carrito.html">Carrito</a></li>
           <li><a href="pages/contacto.html">Contacto</a></li>
         </ul>
@@ -59,7 +59,12 @@
               <td>NVIDIA GeForce RTX 3070</td>
               <td>16GB DDR4</td>
               <td>$1,699.99</td>
-              <td><img src="img/ASUS_ROG_Strix_G15.jpg" alt="ASUS ROG Strix G15"></td>
+              <td>
+                <img
+                  src="img/ASUS_ROG_Strix_G15.jpg"
+                  alt="ASUS ROG Strix G15"
+                />
+              </td>
             </tr>
             <tr>
               <td>Alienware</td>
@@ -68,7 +73,12 @@
               <td>NVIDIA GeForce RTX 3080</td>
               <td>32GB DDR4</td>
               <td>$3,199.99</td>
-              <td><img src="img/Alienware_Aurora_R12.jpg" alt="Alienware Aurora R12"></td>
+              <td>
+                <img
+                  src="img/Alienware_Aurora_R12.jpg"
+                  alt="Alienware Aurora R12"
+                />
+              </td>
             </tr>
             <tr>
               <td>MSI</td>
@@ -77,24 +87,31 @@
               <td>NVIDIA GeForce RTX 3070</td>
               <td>32GB DDR4</td>
               <td>$2,099.99</td>
-              <td><img src="img/MSI_GE75_Raider.jpg" alt="MSI GE75 Raider"></td>
+              <td>
+                <img src="img/MSI_GE75_Raider.jpg" alt="MSI GE75 Raider" />
+              </td>
             </tr>
           </tbody>
         </table>
-        
       </section>
     </main>
 
     <!--seccion destacados-->
     <section>
       <!--Video Youtube-->
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/l6vCUAz1cLc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+      <iframe
+        width="560"
+        height="315"
+        src="https://www.youtube.com/embed/l6vCUAz1cLc"
+        title="YouTube video player"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        allowfullscreen
+      ></iframe>
     </section>
 
     <!--categorías de productos-->
-    <aside>
-      
-    </aside>
+    <aside></aside>
 
     <!--pie de pagina-->
     <footer>
@@ -108,6 +125,5 @@
         </ol>
       </div>
     </footer>
-
   </body>
 </html>
