--- a/pages/ofertas.html
+++ b/pages/ofertas.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="widli=device-widli, initial-scale=1.0" />
     <title>Ofertas</title>
-    <link rel="stylesheet" href="../css/estilos.css">
+    <link rel="stylesheet" href="../css/estilos.css" />
   </head>
   <body>
     <!--encabezado-->
@@ -30,9 +30,7 @@
         </ul>
       </nav>
     </header>
-    <section id="banner">
-
-    </section>
+    <section id="banner"></section>
 
     <!--conteindo principal-->
     <main>
@@ -40,7 +38,7 @@
       <section id="ofertas">
         <div class="card oferta">
           <div>
-            <img src="../img/ASUS_ROG_Strix_G15.jpg" alt="ASUS ROG Strix G15">
+            <img src="../img/ASUS_ROG_Strix_G15.jpg" alt="ASUS ROG Strix G15" />
           </div>
           <div>
             <div>
@@ -60,7 +58,10 @@
         </div>
         <div class="card oferta">
           <div>
-            <img src="../img/Alienware_Aurora_R12.jpg" alt="Alienware Aurora R12">
+            <img
+              src="../img/Alienware_Aurora_R12.jpg"
+              alt="Alienware Aurora R12"
+            />
           </div>
           <div>
             <div>
@@ -80,7 +81,7 @@
         </div>
         <div class="card oferta">
           <div>
-            <img src="../img/MSI_GE75_Raider.jpg" alt="MSI GE75 Raider">
+            <img src="../img/MSI_GE75_Raider.jpg" alt="MSI GE75 Raider" />
           </div>
           <div>
             <div>
@@ -99,9 +100,7 @@
           </div>
         </div>
       </section>
-      
     </main>
-
     <!--pie de pagina-->
     <footer>
       <div>
