--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Carrito</title>
     <link rel="stylesheet" href="../css/estilos.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous"/>
   </head>
   <body>
     <!--encabezado-->
@@ -13,8 +14,12 @@
       <div>
         <img src="../img/logo.png" alt="logo" />
       </div>
+      <label for="menu">
+        <i class="fas fa-bars"></i>
+      </label>
+      <input type="checkbox" id="menu" class="inputMenu">
       <nav>
-        <ul>
+        <ul class="mainMenu">
           <li><a href="../index.html">Inicio</a></li>
           <li>
             <a href="productos.html">Productos</a>
