Clase 8 curso desarrollo web 39410

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Inicio</title>
     <link rel="stylesheet" href="css/estilos.css" />
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
   </head>
   <body>
     <!--encabezado-->
@@ -33,7 +37,7 @@
     
     <section class="youtube">
       <!--Video Youtube-->
-      <h1>LAS MEJORES GAMERS EN UN SOLO LUGAR</h1>
+      <h1 class="animate__animated animate__fadeInUp">LAS MEJORES GAMERS EN UN SOLO LUGAR</h1>
     </section>
 
     <!--conteindo principal-->
@@ -135,7 +139,7 @@
           <img src="img/MSI_GE75_Raider.jpg" alt="MSI GE75 Raider" />
         </div> -->
 
-        <div class="grid-index">
+        <div class="grid-index animate__animated animate__fadeInUp">
           <div>
             <h4>Marca</h4>
             <h4>Modelo</h4>
