--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -7,6 +7,10 @@
     <title>Carrito</title>
     <link rel="stylesheet" href="../css/estilos.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous"/>
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
   </head>
   <body>
     <!--encabezado-->
@@ -39,7 +43,7 @@
     <!--conteindo principal-->
     <main class="main carrito">
       <h1>Carrito</h1>
-      <section id="carrito">
+      <section id="carrito" class="animate__animated animate__fadeInUp">
         <div class="card contenedorProducto">
           <img class="contenedorProducto__imagen" src="../img/ASUS_ROG_Strix_G15.jpg" alt="">
           <div class="contenedorData">
@@ -106,7 +110,7 @@
       </section>
       
       <!--Total carrito-->
-      <aside>
+      <aside class="animate__animated animate__fadeInUp">
         <div class="card">
           <p>Cantidad productos: <span>3</span></p>
           <p>Costo de envio: <span>$500.00</span></p>
