--- a/pages/ofertas.html
+++ b/pages/ofertas.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="widli=device-widli, initial-scale=1.0" />
     <title>Ofertas</title>
     <link rel="stylesheet" href="../css/estilos.css" />
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
   </head>
   <body>
     <!--encabezado-->
@@ -33,7 +37,7 @@
     <section id="banner"></section>
 
     <!--conteindo principal-->
-    <main>
+    <main  class="animate__animated animate__fadeInUp">
       <h1 class="ofertas">Ofertas</h1>
       <section id="ofertas">
         <div class="card oferta">
