--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <!--encabezado-->
-    <header id="header">
+    <header id="header" class="header">
       <div>
         <img src="img/logo.png" alt="logo" />
       </div>
