--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <!--encabezado-->
-    <header>
+    <header class="header">
       <div>
         <img src="../img/logo.png" alt="logo" />
       </div>
