--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <!--encabezado-->
-    <header>
+    <header class="header">
       <div>
         <img src="../img/logo.png" alt="logo">
       </div>
