--- a/pages/ofertas.html
+++ b/pages/ofertas.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <!--encabezado-->
-    <header>
+    <header class="header">
       <div>
         <img src="../img/logo.png" alt="logo" />
       </div>
